--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "typeorm": "ts-node ./node_modules/typeorm/cli.js",
     "typeorm:create-migration": "npm run typeorm -- migration:create src/migrations/$npm_config_name",
     "typeorm:run-migrations": "npm run typeorm migration:run -- -d src/app-data-source.ts",
-    "typeorm:revert-migrations": "npm run typeorm migration:revert -- -d ./typeOrm.config.ts",
+    "typeorm:revert-migrations": "npm run typeorm migration:revert -- -d src/app-data-source.ts",
     "typeorm:generate-migration": "npm run typeorm migration:generate -- -d src/app-data-source.ts src/migrations/$npm_config_name"
   },
   "keywords": [],
